# knotoids

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: knotoid_distribution.html  pl_curve.txt  summary.json
knotoids/: __main__.py  config.py  distribution.py  graph.py  grapher.py  knotoid_class.py  main.py  planar.py  planar_graph.py  plotting.py  region.py  spherical_graph.py  structures.py
tests/: test_planar_graph.py  test_region.py  test_spherical_graph.py
