[tool.poetry]
name = "knotoids"
version = "0.1.0"
description = "Compute the knotoid distribution of piecewise-linear curves."
authors = ["nyerolemou <nyerolemou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
numpy = "^1.25.2"
spherical-geometry = "^1.2.23"


[tool.poetry.scripts]
knotoids = 'knotoids.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
