[tool.poetry]
name = "knotoids"
version = "0.1.0"
description = "Compute the knotoid distribution of piecewise-linear curves."
authors = ["nyerolemou <nyerolemou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
typer = "^0.9.0"
numpy = "^1.25.2"
spherical-geometry = "^1.2.23"
scipy = "^1.11.2"
shapely = "^2.0.1"
plotly-express = "^0.4.1"
plotly = "^5.16.1"
rich = "^13.5.2"


[tool.poetry.scripts]
knotoids = 'knotoids.main:cli'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
